# TPU_compute

./: .gitignore  NEOBERT_CHANGES.md  QUICK_SETUP_NEOBERT.md  README.md  REMOVED_VARIABLES.md  find_bad_json.py  pyproject.toml  requirements_lora.txt
configs/: medroberta_default.json
debug/: test_tpu_device.py
docs/: LORA_GUIDE.md
models/: bpe_tokenizer.py  cpt_deberta_gpu.py  cpt_llama.py  cpt_llama_gpu.py  cpt_roberta.py  cpt_roberta_gpu.py  data_loader.py  lazy_grouping.py  lora_llama.py  model_check.py  pre_shuffle.py  preloading_dataset.py  read_parquet_fileheader.py  requirements_bigbird.txt  test.py  train_bigbird.py  train_bigbird_example.py  train_deberta.py  train_llada.py  train_llama.py  train_longformer.py  train_longformer_multi_gpu.py  train_modernbert.py  train_tokenizer.py  train_tpu_neobert.py  train_tpu_neobert_gcs.py
notebooks/: open_parquet.ipynb
scripts/: Full_Run.sh  Full_Run_cpt.sh  Full_Run_deberta.sh  Full_Run_modernbert.sh  Full_Run_roberta.sh  Full_Run_train.sh  Prep_run_cpt.sh  Prep_run_train.sh  Step1_install_gcloud.sh  Step1b_create_disk.sh  Step1c_upload_to_disk.sh  Step2_install_prerequisites.sh  Step2a_startup_pod.sh  Step2b_install_prequisites.sh  Step2b_install_prequisites_modernBERT.sh  Step2c_mount_disk.sh  Step3_load_data.sh  Step3a_normalize_data.sh  Step3b_tokenize_data.sh  Step3b_upload_scripts.sh  Step3c_collect_normalised_data.sh  Step4_load_data.sh  Step4_train_tokenizer.sh  Step4_upload_scripts.sh  Step5_tpu_cpt.sh  Step5_tpu_train.sh  Step5_tpu_train_deberta.sh  Step5_tpu_train_model.sh  Step5a_tpu_cpt_roberta.sh  Step5b_tpu_train_deberta.sh  Step5c_tpu_cpt_modernbert.sh  Step5c_tpu_train_modernbert.sh  Step6_sync_wandb.sh  Step7_delete_disks.sh  check_status.sh  cpt_wrapper.sh  dataset_normalisation.py  delete.sh  file_splitter.py  gpu_train_deberta.ps1  (+26 more)
tokenizer_deid/: merges.txt  vocab.json
tokenizer_deid_longformer/: merges.txt  tokenizer_config.json
tokenizer_medroberta/: merges.txt
(+42 files in other folders)
