[tool.poetry]
name = "tpu-compute"
version = "0.1.0"
description = ""
authors = ["bramiozo <bramiozo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
accelerate = "^1.2.0"
tokenizers = "^0.21.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.19.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
ftfy = "^6.3.1"
tqdm = "^4.67.1"
pysbd = "^0.3.4"
datasets = "^3.2.0"
fsspec = "2023.9.2"
gcsfs = "2023.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
